[package]
authors = [ "Markus Waas <markus@injectivelabs.org>" ]
edition = "2021"
name    = "neutronshield"
version = "0.1.0"

exclude = [
 # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
 "contract.wasm",
 "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib", "rlib" ]

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = [ "cosmwasm-std/backtraces" ]
# use library feature to disable all instantiate/execute/query exports
library = [  ]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.13
"""

[dependencies]
cosmos-sdk-proto   = { version = "0.12.2", default-features = false }
cosmwasm-schema    = "1.1.2"
cosmwasm-std       = { version = "1.1.2", features = [ "staking", "stargate" ] }
cosmwasm-storage   = "1.1.2"
cw-storage-plus    = "0.13.2"
cw2                = "0.13.2"
injective-cosmwasm = "0.2.2"
injective-math     = { version = "0.1.17" }
injective-std      = { version = "0.1.3" }
neutron-sdk        = { git = "https://github.com/neutron-org/neutron-sdk.git", branch = "main", package = "neutron-sdk", default-features = false, version = "0.6.0" }
osmosis-std-derive = { version = "0.15.2" }
prost              = "0.11.0"
protobuf           = { version = "2", features = [ "with-bytes" ] }
schemars           = "0.8.8"
serde              = { version = "1.0.137", default-features = false, features = [ "derive" ] }
serde-json-wasm    = { version = "0.4.1" }
thiserror          = { version = "1.0.31" }

[dev-dependencies]
cw-multi-test = "0.13.2"
